package Practicas.practica3.ej9;

public abstract class Figure {

    public abstract double area();
    public abstract double perimeter();
}
